@@ -1,0 +1,13 @@
+"""
+Xapian is a highly adaptable toolkit which allows developers to easily
+add advanced indexing and search facilities to their own
+applications. It supports the Probabilistic Information Retrieval
+model and also supports a rich set of boolean query operators.
+
+In addition to the doc strings provided by this python library, you
+may wish to look at the library's overall documentation, either
+installed along with the bindings or online at
+<http://xapian.org/docs/bindings/python/>, as well as the library's
+documentation, possibly installed with the library or with its
+development files, or again online at <http://xapian.org/docs/>.
+"""
